# smash

./: .gitignore  README.md  sample-commands.txt
smash/: CMakeLists.txt  main.c  smash  source.bash  text.txt
smash/includes/: commands.h  dirstack.c  dirstack.h  errors.c  errors.h  executer.c  executer.h  external.h  internal.h  matcher.c  matcher.h  parser.c  parser.h  redirection.c  redirection.h  tokenise.c  tokenise.h  tokeniser.c  tokeniser.h  utils.c  utils.h  variables.c  variables.h
smash/includes/impl/: errors.c  external.c  internal.c  redirection.c  tokeniser.c  utils.c  variables.c
